# code2lora-lite

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-TW.md  USABILITY_ROADMAP.md  USAGE.md  lessons.md  opencode.jsonc  plan-data.md  plan.md  spec-data.md  spec.md  todos.md
.cargo/: config.toml
hooks/: code2lora-autoload.mjs
mcp/: README.md  codex.example.toml  opencode.autoload.example.jsonc  opencode.example.jsonc
scripts/: agent-context.ps1  agent-open.ps1  agent-session-audit.ps1  code2lora-mcp.ps1  download_code2lora_data.ps1  install-mcp-config.ps1  install-mcp-config.sh  mcp-smoke.ps1  opencode-autoload-smoke.ps1  prepare_repopeftbench.ps1  prepare_repopeftbench_evo.ps1
src/: agent_context.rs  base_llm.rs  config.rs  dataset.rs  evo.rs  evo_trainer.rs  hypernetwork.rs  infer.rs  main.rs  qwen2_lora.rs  repo_encoder.rs  trainer.rs
